EDIT background in light color scheme

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,10 @@
     position: sticky;
     right: 0;
   }
+
+  html:not(.dark) .component-resource-table > table > tbody > tr.group:not(:hover) > td:last-child {
+    background-color: rgb(255 255 255/var(--tw-bg-opacity));
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
