FIX for Laravel 11

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,10 @@
 @media (min-width: 768px) {
-  .component-resource-table > table > tbody > tr.group > td:last-child {
+  .alternative-component-resource-table > table > tbody > tr.group > td:last-child {
     position: sticky;
     right: 0;
   }
-
-  html:not(.dark) .component-resource-table > table > tbody > tr.group:not(:hover) > td:last-child {
-    background-color: rgb(255 255 255/var(--tw-bg-opacity));
+  html:not(.dark) .alternative-component-resource-table > table > tbody > tr.group:not(:hover) > td:last-child {
+    background-color: rgb(255, 255, 255, var(--tw-bg-opacity));
   }
 }
 
