--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,9 @@
 @media (min-width: 768px) {
-  table[dusk=resource-table] > table > tbody > tr.group > td:last-child {
+  table[dusk=resource-table] > tbody > tr.group > td:last-child {
     position: sticky;
     right: 0;
   }
-  html:not(.dark) table[dusk=resource-table] > table > tbody > tr.group:not(:hover) > td:last-child {
+  html:not(.dark) table[dusk=resource-table] > tbody > tr.group:not(:hover) > td:last-child {
     background-color: rgb(255, 255, 255, var(--tw-bg-opacity));
   }
 }
