--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,6 @@
 @media (min-width: 768px) {
   table[dusk=resource-table] > tbody > tr.group > td:last-child {
-    display: block;
+    display: table-cell;
     position: sticky;
     right: 0;
   }
