--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -3,7 +3,7 @@
         > tbody {
             > tr.group {
                 > td:last-child {
-                    display: revert;
+                    display: table-cell;
                     position: sticky;
                     right: 0;
                 }
